# godot-bevy

./: .cursorrules  .gitignore  CLAUDE.md  Cargo.toml  README.md  devenv.nix  devenv.yaml  rust-toolchain.toml  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: benchmark-baseline.yml  benchmark-comment.yml  book.yml  ci.yml  package-addon.yml
addons/godot-bevy/: bevy_app_singleton.tscn  optimized_scene_tree_watcher.gd  plugin.cfg  plugin.gd
addons/godot-bevy/wizard/: project_wizard.gd
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/getting-started/: basic-concepts.md  examples.md  index.md  installation.md  plugins.md
book/src/input/: bevy-vs-godot.md  index.md  signals.md
book/src/migration/: index.md  v0.6-to-v0.7.md  v0.7-to-v0.8.md  v0.8-to-v0.9.md
book/src/platform-targets/: android.md  index.md
book/src/profiling/: profiling.md
book/src/scene-tree/: custom-nodes.md  index.md  querying.md  timing.md
book/src/scene-tree/custom-nodes/: automatic-markers.md  index.md  nodes-from-components-and-bundles.md  nodes-from-components.md  property-mapping-with-bevy-bundle.md
book/src/threading/: main-thread-access.md
book/src/timing/: frame-execution.md  index.md
book/src/transforms/: custom-sync.md  direct-physics.md  overview.md  sync-modes.md
docs/: INPUT_SYSTEMS.md  README.md  SHOWCASE.md  TIMING_AND_SCHEDULES.md  TRANSFORMS.md
examples/: run_godot.rs
examples/avian-physics-demo/rust/: Cargo.toml
examples/avian-physics-demo/rust/src/: lib.rs
examples/boids-perf-test/: .gitignore  BENCHMARKING.md  README.md  baseline.json  benchmark.sh  regression_test.py
examples/boids-perf-test/godot/: boids.pck  export_presets.cfg  project.godot  rust.gdextension
examples/boids-perf-test/godot/scenes/: benchmark_cli.tscn  boid.tscn  main.tscn
examples/boids-perf-test/godot/scripts/: benchmark_cli.gd  benchmark_cli.gd.uid  (+4 more)
examples/boids-perf-test/rust/: Cargo.toml
examples/boids-perf-test/rust/src/: bevy_boids.rs  container.rs  lib.rs
examples/dodge-the-creeps-2d/: README.md
examples/dodge-the-creeps-2d/godot/: export_presets.cfg  project.godot  rust.gdextension
examples/dodge-the-creeps-2d/rust/: Cargo.toml
examples/dodge-the-creeps-2d/rust/src/: commands.rs  lib.rs  main_menu.rs
examples/dodge-the-creeps-2d/rust/src/gameplay/: audio.rs  countdown.rs  gameover.rs  mob.rs  mod.rs  player.rs  score.rs
examples/dodge-the-creeps-2d/rust/src/nodes/: player.rs
examples/input-event-demo/: README.md
examples/input-event-demo/godot/: project.godot  rust.gdextension
examples/input-event-demo/rust/: Cargo.toml
examples/input-event-demo/rust/src/: bevy_enhanced_input.rs  bevy_input.rs  godot_input.rs  leafwing_input.rs  lib.rs
examples/perf-test/: BENCHMARKING.md  README.md  baseline.json  benchmark.sh  regression_test.py
examples/perf-test/godot/: addons  project.godot  rust.gdextension
examples/perf-test/rust/: Cargo.toml
examples/perf-test/rust/src/: container.rs  lib.rs  particle_rain.rs
examples/platformer-2d/: README.md
examples/platformer-2d/godot/: export_presets.cfg  project.godot  rust.gdextension
examples/platformer-2d/rust/: Cargo.toml
examples/platformer-2d/rust/src/: components.rs  level_manager.rs  lib.rs  main_menu.rs  scene_management.rs
examples/platformer-2d/rust/src/gameplay/: audio.rs  door.rs  gem.rs  hud.rs  mod.rs  player.rs
examples/plugin-test/: icon.svg.import  main.tscn  project.godot
examples/simple-node2d-movement/: README.md
examples/simple-node2d-movement/godot/: icon.svg.import  main.tscn  project.godot  rust.gdextension  rust.gdextension.uid
examples/simple-node2d-movement/rust/: Cargo.toml
examples/simple-node2d-movement/rust/src/: lib.rs
examples/timing-test/: README.md
examples/timing-test/godot/: project.godot  rust.gdextension
examples/timing-test/rust/: Cargo.toml
examples/timing-test/rust/src/: lib.rs
examples/two-way-sync-demo/: README.md
examples/two-way-sync-demo/godot/: bevy_app_singleton.tscn  main.tscn  project.godot  quad.gd  quad.gd.uid  rust.gdextension
examples/two-way-sync-demo/rust/: Cargo.toml
examples/two-way-sync-demo/rust/src/: lib.rs
godot-bevy/: Cargo.toml
godot-bevy-macros/: Cargo.toml
godot-bevy-macros/src/: bevy_bundle.rs  component_as_godot_node.rs  lib.rs  node_tree_view.rs
godot-bevy-macros/src/godot_node/: attr.rs  bundle.rs  component.rs  mod.rs
godot-bevy-testability/: Cargo.toml  README.md
godot-bevy-testability/src/: helpers.rs  lib.rs
godot-bevy/benches/: transform_conversions.rs  transform_sync_benchmark.rs
godot-bevy/src/: app.rs  autosync.rs  lib.rs  node_tree_view.rs  prelude.rs  utils.rs
godot-bevy/src/bridge/: godot_node_handle.rs  godot_ref.rs  godot_resource_handle.rs  godot_resource_ref.rs  mod.rs
godot-bevy/src/interop/: node_markers.rs
godot-bevy/src/plugins/: assets.rs  audio.rs  collisions.rs  core.rs  godot_bevy_logger.rs  mod.rs  packed_scene.rs  signals.rs
godot-bevy/src/plugins/audio/: channel.rs  command.rs  mod.rs  output.rs  player.rs  plugin.rs  settings.rs  tween.rs
godot-bevy/src/plugins/core/: bevy_input_bridge.rs  collisions.rs  input_event.rs  mod.rs  scene_tree.rs  signals.rs  transforms.rs
godot-bevy/src/plugins/input/: events.rs  input_bridge.rs  mod.rs
godot-bevy/src/plugins/scene_tree/: autosync.rs  mod.rs  node_type_checking_generated.rs  plugin.rs
godot-bevy/src/plugins/transforms/: change_filter.rs  components.rs  config.rs  conversions.rs  custom_sync.rs  mod.rs  plugin.rs  sync_systems.rs
godot-bevy/src/utils/: debug.rs  math.rs  mod.rs  profiling.rs
godot-bevy/src/watchers/: collision_watcher.rs  input_watcher.rs  mod.rs  scene_tree_watcher.rs  signal_watcher.rs
godot-bevy/tests/: scene_tree_test.rs  transforms_test.rs
godot-bevy/tests/scene_tree/: entity_lifecycle.rs  markers_and_groups.rs  multiple_nodes.rs  name_synchronization.rs  utils.rs
godot-bevy/tests/transforms/: hierarchy.rs  mod.rs  sync_modes.rs  transform_initialization.rs  utils.rs
nix/: godot-bin.nix
scripts/: README.md  generate_godot_types.py
(+32 files in other folders)
