[workspace.package]
version = "0.9.1"
edition = "2024"
authors = ["David Chavez <david@dcvz.io>"]
repository = "https://github.com/bytemeadow/godot-bevy"
keywords = ["godot", "game", "engine", "gamedev", "graphics"]
categories = ["game-engines"]
license = "MIT OR Apache-2.0"

[workspace]
members = [
  "godot-bevy",
  "godot-bevy-macros",
  "godot-bevy-testability",
  "examples/avian-physics-demo/rust",
  "examples/dodge-the-creeps-2d/rust",
  "examples/timing-test/rust",
  "examples/input-event-demo/rust",
  "examples/platformer-2d/rust",
  "examples/simple-node2d-movement/rust",
  "examples/perf-test/rust",
  "examples/two-way-sync-demo/rust",
]
resolver = "2"

[workspace.dependencies]
godot = { version = "0.3.5", features = ["experimental-threads"] }
godot-bevy-macros = { version = "0.9.1", path = "godot-bevy-macros" }
