[package]
name = "godot-bevy"
description = "Bridge between Bevy ECS and Godot 4 for Rust-powered game development"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_state",
    "bevy_log",
    "bevy_gilrs",
    "multi_threaded",
] }
godot = { version = "0.3.0", features = ["experimental-threads"] }
godot-bevy-macros.workspace = true
lazy_static = "1.5.0"
thiserror = "2.0.12"
futures-lite = "2.6"
once_cell = "1.21"
parking_lot = "0.12.4"
inventory = "0.3"
paste = "1.0"
