[package]
name = "godot-bevy"
description = "Bridge between Bevy ECS and Godot 4 for Rust-powered game development"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "bevy_asset",
  "multi_threaded",
] }
godot = { version = "0.3.0", features = ["experimental-threads"] }
godot-bevy-macros.workspace = true
thiserror = "2.0.12"
futures-lite = "2.6"
once_cell = "1.21"
parking_lot = "0.12.4"
inventory = "0.3"
paste = "1.0"
chrono = { version = "0.4", optional = true }
tracing = { version = "0.1", default-features = false, features = [
  "std",
  "attributes", # Includes support for the #[instrument] attribute
] }
tracing-tracy = { version = "0.11.4", default-features = false, features = [
  "enable",
], optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }

[features]
default = ["bevy_gamepad", "godot_bevy_log"]
# Enable Bevy's gamepad support via gilrs
bevy_gamepad = ["bevy/bevy_gilrs"]
godot_bevy_log = [
  "dep:chrono",
  "bevy/bevy_log", # NOTE: make it easy for clients to use bevy::log::trace!, etc
]
trace_tracy = [
  "dep:tracing-tracy",
  "dep:tracing-subscriber",
  "bevy/trace_tracy",
]
