[package]
name = "rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "dodge_the_creeps"

[dependencies]
bevy = { version = "0.16", default-features = false }
bevy_kira_audio = { version = "0.23.0", features = ["ogg", "wav"] }
fastrand = { version = "2.3.0" }
godot = "0.2.4"
godot-bevy = { path = "../../../godot-bevy" }
which = "7.0.3"
