[package]
name = "rustinput"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "input-event-demo"

[dependencies]
bevy = { version = "0.16", default-features = false }
fastrand = { version = "2.3.0" }
godot = "0.3"
godot-bevy = { path = "../../../godot-bevy" }
leafwing-input-manager = "0.17.0"
which = "8"
bevy_enhanced_input = "0.13.0"
