[package]
name = "rusttime"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "timing-test"

[dependencies]
bevy = { version = "0.16.0", default-features = false }
fastrand = { version = "2.3.0" }
godot = "0.3.0"
godot-bevy = { path = "../../../godot-bevy" }
which = "7.0.3"
