[package]
name = "rusttime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "timing-test"

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_log"] }
fastrand = { version = "2.3.0" }
godot = "0.3"
godot-bevy = { path = "../../../godot-bevy" }
which = "8"
